tests/ui/typech/type_arg_inference_trait_unbound.lm
trait Foo {}

fn foo<T: Foo>(val: T) { }

fn main() {
    foo(6_i32);
}
